--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Manrope:wght@400;500;700;800&family=Work+Sans:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
-        <!-- tailwind custom color -->
-        <script>
-            tailwind.config = {
-              theme: {
+    <!-- tailwind custom color -->
+    <script>
+        tailwind.config = {
+            theme: {
                 extend: {
-                  colors: {
-                    clifford: '#da373d',
-                  }
+                    colors: {
+                        clifford: '#da373d',
+                    }
                 }
-              }
             }
-          </script>
-        <!-- font awasome -->
-        <script src="https://kit.fontawesome.com/a30a063471.js" crossorigin="anonymous"></script>
+        }
+    </script>
+    <!-- font awasome -->
+    <script src="https://kit.fontawesome.com/a30a063471.js" crossorigin="anonymous"></script>
     <style>
-        .font-manrope{
+        .font-manrope {
             font-family: 'Manrope', sans-serif;
         }
     </style>
@@ -39,28 +39,94 @@
     <header class="container mx-auto">
         <div class="hero">
             <div class="hero-content flex-col lg:flex-row">
-              <div>
-                <h1 class="text-7xl font-extrabold">
-                    Its' good <br>
-                    tea time at The <br>
-                    Tea House</h1>
-                <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds</p>
-                <button class="btn btn-primary">Explore More</button>
-              </div>
-              <div>
-                <img src="/images/banner.png" class="max-w-sm" />
-                <div class="-mt-16 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60">
-                    <i class="fa-solid fa-star text-4xl text-amber-400"></i>
-                    <div>
-                        <h3 class="text-3xl">5.00</h3>
-                        <p>Trust Pilot Ratings</p>
+                <div>
+                    <h1 class="text-7xl font-extrabold">
+                        Its' good <br>
+                        tea time at The <br>
+                        Tea House</h1>
+                    <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds
+                    </p>
+                    <button class="btn btn-primary">Explore More</button>
+                </div>
+                <div>
+                    <img src="/images/banner.png" class="max-w-sm" />
+                    <div class="-mt-16 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60">
+                        <i class="fa-solid fa-star text-4xl text-amber-400"></i>
+                        <div>
+                            <h3 class="text-3xl">5.00</h3>
+                            <p>Trust Pilot Ratings</p>
+                        </div>
                     </div>
                 </div>
-              </div>
             </div>
-          </div>
+        </div>
     </header>
-    <main>
+    <main class="container mx-auto my-24">
+        <!-- feature section -->
+        <section class="text-center">
+            <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
+            <p class="lg:max-w-3xl mb-10 mx-auto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum optio
+                in quod illo similique. Porro eos repellat velit corrupti ipsum quis, magni sint vel debitis modi cum
+                alias sit enim sapiente asperiores officiis cupiditate officia.
+            </p>
+            <!-- Featured Teacard container -->
+            <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+                <!-- first card -->
+                <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="/images/tea-1.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                        <h2 class="text-2xl font-bold">Milk Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <!-- Second card -->
+                <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="/images/tea-2.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                        <h2 class="text-2xl font-bold">Black Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <!-- Third card -->
+                <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="/images/tea-3.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                        <h2 class="text-2xl font-bold">Lemon Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <!-- Fourth card -->
+                <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="/images/tea-4.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                        <h2 class="text-2xl font-bold">Green Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <!-- great tea fresh tea section -->
+        <section class="my-24">
+            <div>
+
+            </div>
+            <div clas="space-y-5">
+                <h3 class="text-5xl font-extra-bold">
+                    Great Tea, Freshly<br>
+                    Presented</h3>
+                <p>
+                    The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It
+                    represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply
+                    appreciated by its custoers because of good words of mouth and unique customized service orginated
+                    from Taiwan.
+                </p>
+                <h4 class="text-xl font-extrabold">Unique Taste</h4>
+                <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                <h4 class="text-xl font-extrabold mt-8">Premium Quality</h4>
+                <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+            </div>
+        </section>
 
     </main>
     <footer>
