--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     appreciated by its custoers because of good words of mouth and unique customized service orginated
                     from Taiwan.
                 </p>
-                <h4 class="text-xl font-extrabold">Unique Taste</h4>
+                <h4 class="text-xl font-extrabold mt-8">Unique Taste</h4>
                 <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
                 <h4 class="text-xl font-extrabold mt-8">Premium Quality</h4>
                 <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
