--- a/index.html
+++ b/index.html
@@ -107,8 +107,12 @@
             </div>
         </section>
         <!-- great tea fresh tea section -->
-        <section class="my-24">
-            <div>
+        <section class="my-24 flex flex-col md:flex-row">
+            <div class="grid gap-8 grid-cols-1 md:grid-cols-2">
+                <div class="rounded-xl"></div>
+                <div class="row-span-2"><img src="images/fresh-1.png" alt=""></div>
+                <div class="row-span-2"><img src="images/fresh-2.png" alt=""></div>
+                <div></div>
 
             </div>
             <div clas="space-y-5">
