--- a/index.html
+++ b/index.html
@@ -107,11 +107,12 @@
             </div>
         </section>
         <!-- great tea fresh tea section -->
-        <section class="my-24 flex flex-col md:flex-row">
+        <section class="my-24 gap-12 flex flex-col md:flex-row">
             <div class="grid gap-8 grid-cols-1 md:grid-cols-2">
-                <div class="rounded-xl bg-gradient-to-r from-cyan-500 to-blue-500"></div>
-                <div class="row-span-2"><img src="images/fresh-1.png" alt=""></div>
-                <div class="row-span-2"><img src="images/fresh-2.png" alt=""></div>
+                <div class="rounded-xl h-36 bg-gradient-to-r from-red-100 to-amber-100"></div>
+                <div class="row-span-2 bg-[#E6A6231A] rounded-lg px-8 pt-12 pb-8 flex justify-center"><img src="images/fresh-1.png" alt=""></div>
+                <div class="row-span-2 bg-[#5776391A] rounded-lg px-8 pt-12 pb-8 flex justify-center"><img src="images/fresh-2.png" alt=""></div>
+                <div class="rounded-xl h-36 bg-gradient-to-r from-[#D9D9D9] to-white"></div>
                 <div></div>
 
             </div>
