--- a/index.html
+++ b/index.html
@@ -132,6 +132,14 @@
                 <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
             </div>
         </section>
+        <!-- super client section -->
+        <section>
+            <h2>Meet Our Super
+                <br>Clients</h2>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                <button class="btn btn-primary">Show All</button>
+        
+        </section>
 
     </main>
     <footer>
