--- a/index.html
+++ b/index.html
@@ -134,24 +134,85 @@
         </section>
         <!-- super client section -->
         <section class="my-24 flex flex-col lg:flex-row gap-12 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#F00] px-16 py-24">
-            <div class="space-y-5">
-                <h2 class="text-5xl font-extrabold text-white">
-                    Meet Our Super
-                    <br>Clients</h2>
-                    <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-                    <button class="btn btn-primary">Show All</button>
+            <div class="flex items-center lg:pr-28">
+                <div class="space-y-5">
+                    <h2 class="text-5xl font-extrabold text-white">
+                        Meet Our Super
+                        <br>Clients</h2>
+                        <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                        <button class="btn btn-primary">Show All</button>
+                </div>
             </div>
-            <!-- revieew -->
-
-            <div class="p-10 relative rounded-lg bg-white">
-                <img class="absolute -left-5 -top-5" src="images/client.png" alt="">
+            <div class="relative">
+                <!-- previous revieew -->
+            <div class="relative z-10 p-10 mb-16 opacity-40 rounded-lg bg-white">
+                <img class="absolute -left-5 -top-5 border-4 rounded-full bg-white" src="images/client.png" alt="">
                 <p>
                     We are providing the best and suitable home insurance services for the people who are interested to treatment
                 </p>
                 <h4 class="font-bold mt-5">Ilham Yuda</h4>
                 <p class="font-normal">Businessman</p>
+                <div class="flex justify-end">
+                    <img src="images/circles.png" alt="">
+                </div>
 
             </div>
+            <!-- current revieew -->
+            <div class=" absolute z-20 p-10 top-40 lg:-left-32 lg:w-[433px] rounded-lg bg-white">
+                <img class="absolute -left-5 -top-5 border-4 rounded-full bg-white" src="images/client.png" alt="">
+                <p>
+                    We are providing the best and suitable home insurance services for the people who are interested to treatment
+                </p>
+                <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                <p class="font-normal">Businessman</p>
+                <div class="flex justify-end">
+                    <img src="images/circles.png" alt="">
+                </div>
+
+            </div>
+            <!-- upcoming revieew -->
+            <div class="relative z-10 p-10 opacity-40 rounded-lg bg-white">
+                <img class="absolute -left-5 -top-5 border-4 rounded-full bg-white" src="images/client.png" alt="">
+                <p>
+                    We are providing the best and suitable home insurance services for the people who are interested to treatment
+                </p>
+                <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                <p class="font-normal">Businessman</p>
+                <div class="flex justify-end">
+                    <img src="images/circles.png" alt="">
+                </div>
+
+            </div>
+            </div>
+        </section>
+        <!-- News & Event section -->
+        <section class="my-24 text-center">
+            <h2 class="text-4xl font-extrabold">News & Events</h2>
+            <p class=" mb-12 text-base text-[#777]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,<br>by injected humour, or randomised words which don't look even slightly believable. </p>
+            <div class="flex justify-center gap-6">
+                <div class="border rounded-xl p-4 text-left">
+                    <img src="images/news-1.png" alt="">
+                        <p class="mt-5 text-[#777]">Feb 05, 2027</p>
+                        <h4 class="mt-2 font-xl font-extrabold">Collecting 8 points for discount</h4>
+                        <p class="text-[#777]">There are many variations of passages<br> of Lorem Ipsum available.</p>
+                        <h6 class="mt-2 font-bold">Learn More</h6>
+                </div>
+                <div class="border rounded-xl p-4 text-left">
+                    <img src="images/news-2.png" alt="">
+                    <p class="mt-5 text-[#777]">Feb 05, 2027</p>
+                    <h4 class="mt-2 font-xl font-extrabold">Collecting 8 points for discount</h4>
+                    <p class="text-[#777]">There are many variations of passages<br> of Lorem Ipsum available.</p>
+                    <h6 class="mt-2 font-bold">Learn More</h6>
+                </div>
+                <div class="border rounded-xl p-4 text-left">
+                    <img src="images/news-3.png" alt="">
+                    <p class="mt-5 text-[#777]">Feb 05, 2027</p>
+                    <h4 class="mt-2 font-xl font-extrabold">Collecting 8 points for discount</h4>
+                    <p class="text-[#777]">There are many variations of passages<br> of Lorem Ipsum available.</p>
+                    <h6 class="mt-2 font-bold">Learn More</h6>
+                </div>
+            </div>
+
         </section>
 
     </main>
