responsive allighment for small device added

--- a/index.html
+++ b/index.html
@@ -188,23 +188,23 @@
         <!-- News & Event section -->
         <section class="my-24 text-center">
             <h2 class="text-4xl font-extrabold">News & Events</h2>
-            <p class=" mb-12 text-base text-[#777]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,<br>by injected humour, or randomised words which don't look even slightly believable. </p>
-            <div class="flex justify-center gap-6">
-                <div class="border rounded-xl p-4 text-left">
+            <p class=" mb-12 text-base p-2 text-[#777]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,<br>by injected humour, or randomised words which don't look even slightly believable. </p>
+            <div class="flex justify-center flex-col lg:flex-row gap-6">
+                <div class="border rounded-xl p-4 mx-auto md:mx-0 text-left">
                     <img src="images/news-1.png" alt="">
                         <p class="mt-5 text-[#777]">Feb 05, 2027</p>
                         <h4 class="mt-2 font-xl font-extrabold">Collecting 8 points for discount</h4>
                         <p class="text-[#777]">There are many variations of passages<br> of Lorem Ipsum available.</p>
                         <h6 class="mt-2 font-bold">Learn More</h6>
                 </div>
-                <div class="border rounded-xl p-4 text-left">
+                <div class="border rounded-xl p-4 mx-auto md:mx-0 text-left">
                     <img src="images/news-2.png" alt="">
                     <p class="mt-5 text-[#777]">Feb 05, 2027</p>
                     <h4 class="mt-2 font-xl font-extrabold">Collecting 8 points for discount</h4>
                     <p class="text-[#777]">There are many variations of passages<br> of Lorem Ipsum available.</p>
                     <h6 class="mt-2 font-bold">Learn More</h6>
                 </div>
-                <div class="border rounded-xl p-4 text-left">
+                <div class="border rounded-xl p-4 mx-auto md:mx-0 text-left">
                     <img src="images/news-3.png" alt="">
                     <p class="mt-5 text-[#777]">Feb 05, 2027</p>
                     <h4 class="mt-2 font-xl font-extrabold">Collecting 8 points for discount</h4>
