--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             theme: {
                 extend: {
                     colors: {
-                        clifford: '#da373d',
+                        'gradient-start': '#FF8938',
+                        'gradient-end': '#F00',
                     }
                 }
             }
@@ -37,8 +38,8 @@
 
 <body class="font-manrope">
     <header class="container mx-auto">
-        <div class="hero">
-            <div class="hero-content flex-col lg:flex-row">
+        <div class="my-20">
+            <div class="flex justify-between items-center flex-col lg:flex-row">
                 <div>
                     <h1 class="text-7xl font-extrabold">
                         Its' good <br>
@@ -46,10 +47,10 @@
                         Tea House</h1>
                     <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds
                     </p>
-                    <button class="btn btn-primary">Explore More</button>
+                    <button class="btn text-white bg-gradient-to-r from-gradient-start to-gradient-end border-none">Explore More <i class="fa-solid fa-arrow-trend-up"></i></button>
                 </div>
                 <div>
-                    <img src="/images/banner.png" class="max-w-sm" />
+                    <img src="/images/banner.png" class="" />
                     <div class="-mt-16 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60">
                         <i class="fa-solid fa-star text-4xl text-amber-400"></i>
                         <div>
@@ -110,8 +111,10 @@
         <section class="my-24 gap-12 flex flex-col md:flex-row">
             <div class="grid gap-8 grid-cols-1 md:grid-cols-2">
                 <div class="rounded-xl h-36 bg-gradient-to-r from-red-100 to-amber-100"></div>
-                <div class="row-span-2 bg-[#E6A6231A] rounded-lg px-8 pt-12 pb-8 flex justify-center"><img src="images/fresh-1.png" alt=""></div>
-                <div class="row-span-2 bg-[#5776391A] rounded-lg px-8 pt-12 pb-8 flex justify-center"><img src="images/fresh-2.png" alt=""></div>
+                <div class="row-span-2 bg-[#E6A6231A] rounded-lg px-8 pt-12 pb-8 flex justify-center"><img
+                        src="images/fresh-1.png" alt=""></div>
+                <div class="row-span-2 bg-[#5776391A] rounded-lg px-8 pt-12 pb-8 flex justify-center"><img
+                        src="images/fresh-2.png" alt=""></div>
                 <div class="rounded-xl h-36 bg-gradient-to-r from-[#D9D9D9] to-white"></div>
                 <div></div>
 
@@ -133,69 +136,78 @@
             </div>
         </section>
         <!-- super client section -->
-        <section class="my-24 flex flex-col lg:flex-row gap-12 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#F00] px-16 py-24">
+        <section
+            class="my-24 flex flex-col lg:flex-row gap-12 rounded-xl bg-gradient-to-r from-gradient-start to-gradient-end px-16 py-24">
             <div class="flex items-center lg:pr-28">
                 <div class="space-y-5">
                     <h2 class="text-5xl font-extrabold text-white">
                         Meet Our Super
-                        <br>Clients</h2>
-                        <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-                        <button class="btn btn-primary">Show All</button>
+                        <br>Clients
+                    </h2>
+                    <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised words which
+                        don't look even slightly believable. </p>
+                    <button class="btn bg-white"><span class="bg-clip-text text-transparent bg-gradient-to-r from-gradient-start to-gradient-end">Show All</span></button>
                 </div>
             </div>
             <div class="relative">
                 <!-- previous revieew -->
-            <div class="relative z-10 p-10 mb-16 opacity-40 rounded-lg bg-white">
-                <img class="absolute -left-5 -top-5 border-4 rounded-full bg-white" src="images/client.png" alt="">
-                <p>
-                    We are providing the best and suitable home insurance services for the people who are interested to treatment
-                </p>
-                <h4 class="font-bold mt-5">Ilham Yuda</h4>
-                <p class="font-normal">Businessman</p>
-                <div class="flex justify-end">
-                    <img src="images/circles.png" alt="">
-                </div>
+                <div class="relative z-10 p-10 mb-16 opacity-40 rounded-lg bg-white">
+                    <img class="absolute -left-5 -top-5 border-4 rounded-full bg-white" src="images/client.png" alt="">
+                    <p>
+                        We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment
+                    </p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-normal">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
 
-            </div>
-            <!-- current revieew -->
-            <div class=" absolute z-20 p-10 top-40 lg:-left-32 lg:w-[433px] rounded-lg bg-white">
-                <img class="absolute -left-5 -top-5 border-4 rounded-full bg-white" src="images/client.png" alt="">
-                <p>
-                    We are providing the best and suitable home insurance services for the people who are interested to treatment
-                </p>
-                <h4 class="font-bold mt-5">Ilham Yuda</h4>
-                <p class="font-normal">Businessman</p>
-                <div class="flex justify-end">
-                    <img src="images/circles.png" alt="">
                 </div>
+                <!-- current revieew -->
+                <div class=" absolute z-20 p-10 top-40 lg:-left-32 lg:w-[433px] rounded-lg bg-white">
+                    <img class="absolute -left-5 -top-5 border-4 rounded-full bg-white" src="images/client.png" alt="">
+                    <p>
+                        We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment
+                    </p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-normal">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
 
-            </div>
-            <!-- upcoming revieew -->
-            <div class="relative z-10 p-10 opacity-40 rounded-lg bg-white">
-                <img class="absolute -left-5 -top-5 border-4 rounded-full bg-white" src="images/client.png" alt="">
-                <p>
-                    We are providing the best and suitable home insurance services for the people who are interested to treatment
-                </p>
-                <h4 class="font-bold mt-5">Ilham Yuda</h4>
-                <p class="font-normal">Businessman</p>
-                <div class="flex justify-end">
-                    <img src="images/circles.png" alt="">
                 </div>
+                <!-- upcoming revieew -->
+                <div class="relative z-10 p-10 opacity-40 rounded-lg bg-white">
+                    <img class="absolute -left-5 -top-5 border-4 rounded-full bg-white" src="images/client.png" alt="">
+                    <p>
+                        We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment
+                    </p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-normal">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
 
-            </div>
+                </div>
             </div>
         </section>
         <!-- News & Event section -->
         <section class="my-24 text-center">
             <h2 class="text-4xl font-extrabold">News & Events</h2>
-            <p class=" mb-12 text-base p-2 text-[#777]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,<br>by injected humour, or randomised words which don't look even slightly believable. </p>
+            <p class=" mb-12 text-base p-2 text-[#777]">There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form,<br>by injected humour, or randomised words which
+                don't look even slightly believable. </p>
             <div class="flex justify-center flex-col lg:flex-row gap-6">
                 <div class="border rounded-xl p-4 mx-auto md:mx-0 text-left">
                     <img src="images/news-1.png" alt="">
-                        <p class="mt-5 text-[#777]">Feb 05, 2027</p>
-                        <h4 class="mt-2 font-xl font-extrabold">Collecting 8 points for discount</h4>
-                        <p class="text-[#777]">There are many variations of passages<br> of Lorem Ipsum available.</p>
-                        <h6 class="mt-2 font-bold">Learn More</h6>
+                    <p class="mt-5 text-[#777]">Feb 05, 2027</p>
+                    <h4 class="mt-2 font-xl font-extrabold">Collecting 8 points for discount</h4>
+                    <p class="text-[#777]">There are many variations of passages<br> of Lorem Ipsum available.</p>
+                    <h6 class="mt-2 font-bold">Learn More</h6>
                 </div>
                 <div class="border rounded-xl p-4 mx-auto md:mx-0 text-left">
                     <img src="images/news-2.png" alt="">
@@ -212,13 +224,55 @@
                     <h6 class="mt-2 font-bold">Learn More</h6>
                 </div>
             </div>
-
         </section>
-
     </main>
-    <footer>
+        <footer class="px-48 py-10 b-base-200 text-base-content">
+            <div class="flex justify-between my-24">
+                <img src="images/cup.png" alt="">
+                <p>
+                    <span>Ready to get strated?</span>
+                    <button class="btn text-white bg-gradient-to-r from-gradient-start to-gradient-end">Get Started</button>
+                </p>
+            </div>
+            <div class="footer">
+                <div>
+                    <span class="footer-title">Services</span>
+                    <a class="link link-hover">Branding</a>
+                    <a class="link link-hover">Design</a>
+                    <a class="link link-hover">Marketing</a>
+                    <a class="link link-hover">Advertisement</a>
+                </div>
+                <div>
+                    <span class="footer-title">Company</span>
+                    <a class="link link-hover">About us</a>
+                    <a class="link link-hover">Contact</a>
+                    <a class="link link-hover">Jobs</a>
+                    <a class="link link-hover">Press kit</a>
+                </div>
+                <div>
+                    <span class="footer-title">Legal</span>
+                    <a class="link link-hover">Terms of use</a>
+                    <a class="link link-hover">Privacy policy</a>
+                    <a class="link link-hover">Cookie policy</a>
+                </div>
+                <div>
+                    <span class="footer-title">Newsletter</span>
+                    <div class="form-control w-80">
+                        <label class="label">
+                            <span class="label-text">Enter your email address</span>
+                        </label>
+                        <div class="relative">
+                            <input type="text" placeholder="username@site.com" class="bg-transparent border-b-2 border-black outline-none py-4" />
+                            <button class="btn text-white absolute top-0 right-0 rounded-full bg-gradient-to-r from-gradient-start to-gradient-end border-none"><i class="fa-solid fa-angle-right"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="mt-10 text-center">
+                <p>Copyright © 2023 - All right reserved by ACME Industries Ltd</p>
+            </div>
 
-    </footer>
+        </footer>
 </body>
 
 </html>
