--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <button class="btn text-white bg-gradient-to-r from-gradient-start to-gradient-end border-none">Explore More <i class="fa-solid fa-arrow-trend-up"></i></button>
                 </div>
                 <div>
-                    <img src="/images/banner.png" class="" />
+                    <img src="./images/banner.png" class="" />
                     <div class="-mt-16 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60">
                         <i class="fa-solid fa-star text-4xl text-amber-400"></i>
                         <div>
@@ -74,7 +74,7 @@
             <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
                 <!-- first card -->
                 <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
-                    <figure><img src="/images/tea-1.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/tea-1.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
                         <h2 class="text-2xl font-bold">Milk Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
@@ -82,7 +82,7 @@
                 </div>
                 <!-- Second card -->
                 <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
-                    <figure><img src="/images/tea-2.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/tea-2.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
                         <h2 class="text-2xl font-bold">Black Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
@@ -90,7 +90,7 @@
                 </div>
                 <!-- Third card -->
                 <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
-                    <figure><img src="/images/tea-3.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/tea-3.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
                         <h2 class="text-2xl font-bold">Lemon Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
@@ -98,7 +98,7 @@
                 </div>
                 <!-- Fourth card -->
                 <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
-                    <figure><img src="/images/tea-4.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/tea-4.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
                         <h2 class="text-2xl font-bold">Green Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
